dark mode solved

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
   }
 
   .moon-mode .sidebar-icon {
-    @apply bg-[#061E46] hover:bg-[#143E93] text-gray-300 hover:text-gray-100;
+    @apply bg-[#061E4600] hover:bg-[#1515eb] text-gray-300 hover:text-gray-100;
   }
 
   .sidebar-tooltip {
@@ -70,7 +70,7 @@
   }
 
   .moon-mode .active {
-    @apply bg-[#143E93] shadow-sm;
+    @apply bg-[#1515eb] shadow-sm;
   }
 
   .dawn-mode {
@@ -90,7 +90,21 @@
 
 .moon-mode {
   background-color: black;
-  background-image: url("https://4kwallpapers.com/images/wallpapers/windows-11-dark-mode-blue-stock-official-3840x2400-5630.jpg");
+  background: linear-gradient(130deg, #ad90c1 0%, rgb(3, 0, 84) 100%),
+    linear-gradient(130deg, #09007b 0%, rgba(15, 0, 66, 0) 30%),
+    linear-gradient(129.96deg, rgb(255, 47, 47) 10.43%, rgb(0, 4, 96) 92.78%),
+    radial-gradient(
+      100% 246.94% at 100% 0%,
+      rgb(255, 255, 255) 0%,
+      rgba(37, 0, 66, 0.8) 100%
+    ),
+    linear-gradient(121.18deg, rgb(20, 0, 255) 0.45%, rgb(27, 0, 62) 100%),
+    linear-gradient(154.03deg, rgb(206, 0, 0) 0%, rgb(255, 0, 61) 74.04%),
+    linear-gradient(341.1deg, rgb(178, 91, 186) 7.52%, rgb(16, 0, 119) 77.98%),
+    linear-gradient(222.34deg, rgb(169, 0, 0) 12.99%, rgb(0, 255, 224) 87.21%),
+    linear-gradient(150.76deg, rgb(183, 213, 0) 15.35%, rgb(34, 0, 170) 89.57%);
+  background-blend-mode: overlay, normal, overlay, color-burn, screen, overlay,
+    difference, difference, normal;
   background-repeat: no-repeat;
   background-size: cover;
 }
